--- a/src/components/common/Modal/Modal.scss
+++ b/src/components/common/Modal/Modal.scss
@@ -5,60 +5,68 @@
   z-index: 100;
 
   &__wrapper {
-    width: 540px;
     border-radius: 24px;
-    position: fixed;
-    top: 0%;
     left: 0;
-    right: 0;
     margin: 5px auto 5px auto;
+    position: fixed;
+    right: 0;
+    top: 0%;
+    width: 540px;
   }
 
   &__header {
-    background: -webkit-linear-gradient(-45deg, #491769 0%, #0d3091 100%);
+    background: -webkit-linear-gradient(
+      -45deg,
+      $color-scarlet-gum 0%,
+      $color-torea-bay 100%
+    );
+    border-radius: 24px 24px 0 0;
     height: 35px;
     line-height: 40px;
     padding: 5px 20px;
     text-align: right;
-    border-radius: 24px 24px 0 0;
   }
 
   &__button--close {
-    color: white;
+    color: $color-white;
     cursor: pointer;
     float: right;
     font-size: 30px;
     margin: 0;
 
     &:hover {
-      color: black;
+      color: $color-black;
     }
   }
 
   &__body {
-    text-align: center;
-    background: #1d262b;
+    background: $color-ebony-clay-2;
+    background: -webkit-linear-gradient(
+      -45deg,
+      $color-orchid 0%,
+      $color-blue-ribbon 100%
+    );
+    height: 100%;
     max-height: calc(100% - 90px);
-    background: -webkit-linear-gradient(-45deg, #d64eb8 0%, #003fee 100%);
     overflow-y: auto;
     position: relative;
-    height: 100%;
+    text-align: center;
 
     &::-webkit-scrollbar-track {
-      box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-      background-color: #372e50;
+      box-shadow: inset 0 0 6px $color-black-opacity-30;
+      background-color: $color-martinique;
     }
     &::-webkit-scrollbar {
       width: 5px;
     }
     &::-webkit-scrollbar-thumb {
-      background-color: #484d79;
+      background-color: $color-east-bay-2;
     }
   }
 
   &__footer {
-    background: #263238;
-    height: 45px;
+    background: $color-outer-space;
     border-radius: 0 0 24px 24px;
+    height: 45px;
   }
 }
