--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -1,15 +1,21 @@
+@import "./variables.scss";
+
 .btn {
+  background: -webkit-linear-gradient(
+    -45deg,
+    $color-medium-purple-1 0%,
+    $color-cerulean 100%
+  );
   border-radius: 10px;
-  color: white;
+  color: $color-white;
   border: 0px;
   font-size: 16px;
   padding: 7px 14px 7px 14px;
   margin: 2px;
-  background: -webkit-linear-gradient(-45deg, #954ed6 0%, #009bee 100%);
 }
 
 .btn:hover {
-  box-shadow: inset 0 0 0 2px yellow;
+  box-shadow: inset 0 0 0 2px $color-yellow;
   cursor: pointer;
 }
 
@@ -18,34 +24,33 @@
 }
 
 .btn-delete {
-  background: -webkit-linear-gradient(-45deg, #b31515 0%, #ee3b94 100%);
+  background: -webkit-linear-gradient(
+    -45deg,
+    $color-thunderbird-1 0%,
+    $color-french-rose 100%
+  );
 }
 
 .error {
-  text-align: center;
+  color: $color-brick-red;
   margin: 5px 0;
   padding: 5px 10px;
-  color: #c92c43;
+  text-align: center;
 }
 
 .alert {
-  font-size: 12px;
-  padding: 5px;
-  background-color: red;
+  background-color: $color-red;
   display: flex;
   flex-direction: column;
+  font-size: 12px;
+  padding: 5px;
 }
 
 .alert-danger {
   font-size: 12px;
 }
 
-/* .form-group {
-  font-size: calc(3px + 2vmin);
-} */
-
 .register-form {
-  /* background-color: yellow; */
   display: flex;
 }
 
@@ -54,131 +59,42 @@
 }
 
 .form-group {
-  font-size: 14px;
-  /* margin: 5px; */
-  /* background-color: green; */
   display: flex;
   flex-direction: row;
+  font-size: 14px;
   justify-content: flex-end;
 }
 
 .form-container {
-  /* background-color: orchid; */
-  /* width: 500px; */
-  margin: 5px;
   display: flex;
   flex-direction: column;
+  margin: 5px;
 }
 
 .form-control {
-  /* background-color: rgb(33, 33, 53); */
+  border: solid 0px;
   border-radius: 5px;
-  margin-left: 5px;
   display: flex;
   flex-direction: row;
-  border: solid 0px;
+  margin-left: 5px;
   width: 150px;
 }
 
 .form-label {
-  /* background-color: purple; */
-  font-size: 14px;
-  padding: 5px;
+  align-items: center;
   display: flex;
   flex-direction: row;
+  font-size: 14px;
   justify-content: flex-end;
-  align-items: center;
+  padding: 5px;
 }
 
 .form-block {
-  padding-top: 1px;
-  /* background-color: orange; */
-  display: flex;
   align-items: center;
-  justify-content: center;
+  display: flex;
   flex-direction: column;
-  /* justify-items: center;   */
-}
-
-.toggle-label {
-  margin-right: 5px;
-  font-size: 11px;
-}
-
-.toggle-on {
-  color: white;
-  font-weight: bold;
-  background-color: #21c975;
-  border-radius: 24px;
-  padding: 4px;
-  margin-left: 4px;
-  width: 32px;
-}
-
-.critical {
-  background-color: #ff5ca3;
-}
-
-.toggle-off {
-  background-color: #949b98;
-  font-weight: bold;
-  border-radius: 24px;
-  padding: 4px;
-  margin-left: 4px;
-  width: 32px;
-}
-
-.toggle-pip-on {
-  background-color: white;
-  width: 14px;
-  height: 14px;
-  border-radius: 18px;
-  transition: 0.2s;
-}
-
-.toggle-pip-off {
-  background-color: white;
-  width: 14px;
-  height: 14px;
-  border-radius: 18px;
-  transform: translateX(18px);
-  transition: 0.2s;
-}
-
-.toggle-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  /* margin-bottom: 5px; */
-  /* background-color: blue; */
-}
-
-.toggle-group {
-  background-color: rgb(15, 24, 39);
-  padding: 6px 24px 6px 24px;
-  border-radius: 24px;
-  margin: 5px;
-}
-
-.copy-to-clipboard {
-  font-size: 11px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  /* background-color: red; */
-  margin-right: 25px;
-  color: cyan;
-  cursor: pointer;
-}
-
-.copy-to-clipboard:hover {
-  text-decoration: underline;
-}
-
-.toggle-clipboard-group {
-  /* background-color: green; */
-  display: flex;
-  margin-bottom: 5px;
+  justify-content: center;
+  padding-top: 1px;
 }
 
 .info {
