--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,7 +1,6 @@
-// Base colors
 $color-red: #ff0000;
 
-// 2 dupe:
+/* 2 dupe: */
 $color-thunderbird-1: #b31515;
 $color-thunderbird-2: #b71c1c;
 
@@ -11,16 +10,16 @@ $color-finn: rgb(110, 45, 76);
 $color-hibiscus: #c0376b;
 $color-mulberry: #c75f87;
 $color-charm: #d37c9d;
-$color-orchid: #d64eb8; //gradient
+$color-orchid: #d64eb8; /* gradient */
 $color-french-rose: #ee3b94;
 $color-hot-pink-1: #ff5ca3;
 $color-hot-pink-2: #fa68b1;
 
 $color-white: #ffffff;
 
-// Dupe
+/* Dupe */
 $color-black: #000000;
-$color-black: #010101;
+/* $color-black: #010101; */
 
 $color-shark-1: #19191d;
 $color-shark-2: rgb(33, 33, 37);
@@ -30,7 +29,7 @@ $color-shark-3: #282c34;
 $color-outer-space: #263238;
 $color-charade: rgb(42, 44, 56);
 
-// Dupe
+/*  Dupe */
 $color-black-opacity-57: rgba(0, 0, 0, 0.57);
 $color-black-opacity-60: rgba(0, 0, 0, 0.6);
 
@@ -45,7 +44,7 @@ $color-tuna-2: rgb(57, 57, 75);
 
 $color-mantle: #949b98;
 
-// DUPE
+/*  DUPE */
 $color-silver-chalice-1: #aaaaaa;
 $color-silver-chalice-2: rgb(172, 172, 172);
 $color-silver-chalice-3: rgb(175, 175, 175);
@@ -55,15 +54,15 @@ $color-silver-2: rgb(202, 202, 202);
 $color-loblolly: rgb(195, 203, 211);
 $color-scorpion: rgb(121, 17, 17);
 
-// Dupe
+/*  Dupe */
 $color-dove-gray-1: #616161;
 $color-dove-gray-2: #636363;
 
 $color-dove-gray-3: #6e6e6e;
 $color-boulder: #7b7b7b;
-$color-gray: #808080; //(gray)
+$color-gray: #808080; /* (gray) */
 
-// So many purples
+/*  So many purples */
 
 $color-steel-gray-1: rgb(25, 25, 36);
 $color-cinder: rgb(22, 19, 32);
@@ -71,12 +70,13 @@ $color-mirage: #1c1829;
 $color-ebony: rgb(15, 24, 39);
 $color-bastille: rgb(28, 23, 34);
 
-// 2dupe:
+/*  2dupe: */
 $color-steel-gray-2: rgb(35, 35, 51);
 $color-bleached-cedar: rgb(40, 31, 51);
 
 $color-martinique: #372e50;
-$color-ebony-clay: rgb(42, 42, 68);
+$color-ebony-clay-1: rgb(42, 42, 68);
+$color-ebony-clay-2: #1d262b;
 $color-port-gore: #221b3a;
 $color-cloud-burst: #263254;
 $color-bossanova: rgb(66, 49, 94);
@@ -86,7 +86,7 @@ $color-scarlet-gum: #491769;
 $color-jacarta: rgb(46, 46, 104);
 $color-rhino: rgb(50, 60, 104);
 
-// 3 dupe:
+/*  3 dupe: */
 $color-gun-powder: rgb(69, 69, 90);
 $color-trout: rgb(74, 74, 95);
 $color-mulled-wine: rgb(70, 70, 99);
@@ -95,7 +95,7 @@ $color-waikawa-gray: rgb(86, 99, 165);
 $color-east-bay-1: rgb(73, 83, 131);
 $color-east-bay-2: #484d79;
 
-// 2 dupe:
+/*  2 dupe: */
 $color-comet-1: rgb(83, 83, 119);
 $color-comet-2: rgb(86, 86, 119);
 
@@ -129,15 +129,15 @@ $color-yellow: #ffff00;
 $color-laser-lemon: #f7ff66;
 $color-texas-rose: #ffa557;
 
-// Button gradient colors
+/*  Button gradient colors */
 
-// Input / Form variables
-// $input-border-color: $gray-light;
-// $input-label-color: $gray;
-// $input-error-color: $color-danger;
-// make variables available to JS
-// :export {
-//   colorBlack: $color-black;
-//   colorRed: $color-red;
-//   colorWhite: $color-white;
-// }
+/*  Input / Form variables */
+/*  $input-border-color: $gray-light; */
+/*  $input-label-color: $gray; */
+/*  $input-error-color: $color-danger; */
+/*  make variables available to JS */
+/*  :export { */
+/*    colorBlack: $color-black; */
+/*    colorRed: $color-red; */
+/*    colorWhite: $color-white; */
+/*  } */
